// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  padding: 1em 2.5em;
  border: none;
  background: linear-gradient(to bottom,#ed5f55,#ff9933);
  color: #fff;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1em;
  position: relative;
  z-index: 1;
}

.c0:before {
  content: "Search";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: linear-gradient(to top,#ed5f55,#ff9933);
  opacity: 0;
  z-index: 2;
  line-height: 3.2;
  -webkit-transition: opacity .4s linear;
  transition: opacity .4s linear;
}

.c0:hover:before {
  -webkit-transition: opacity .4s linear;
  transition: opacity .4s linear;
  opacity: 1;
}

@media (min-width:728px) {
  .c0 {
    display: inline-block;
    width: 100%;
  }
}

<button
  class="c0"
/>
`;

exports[`LowerContainer renders correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  padding: 1em 2.5em;
  border: none;
  background: linear-gradient(to bottom,#ed5f55,#ff9933);
  color: #fff;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1em;
  position: relative;
  z-index: 1;
  display: block;
  margin: 0 auto;
  width: 100%;
  padding: 0.7em 0;
}

.c0:before {
  content: "Search";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: linear-gradient(to top,#ed5f55,#ff9933);
  opacity: 0;
  z-index: 2;
  line-height: 3.2;
  -webkit-transition: opacity .4s linear;
  transition: opacity .4s linear;
}

.c0:hover:before {
  -webkit-transition: opacity .4s linear;
  transition: opacity .4s linear;
  opacity: 1;
}

@media (min-width:728px) {
  .c0 {
    display: inline-block;
    width: 100%;
  }
}

<button
  class="c0"
/>
`;

exports[`MasonryContainer renders correctly 1`] = `
.c0 {
  display: block;
  margin: 0 auto;
  width: 60%;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  padding: 0.5em 0;
  background: linear-gradient(to bottom,#ed5f55,#ff9933);
  color: #fff;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1em;
  position: relative;
}

.c0:before {
  content: "Read more";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: linear-gradient(to top,#ed5f55,#ff9933);
  opacity: 0;
  z-index: 2;
  line-height: 2.45;
  -webkit-transition: opacity .4s linear;
  transition: opacity .4s linear;
}

.c0:hover:before {
  -webkit-transition: opacity .4s linear;
  transition: opacity .4s linear;
  opacity: 1;
}

<a
  class="c0"
/>
`;
